name:                griddler
version:             0.1.0.0
synopsis:            Generating and solving griddler puzzles
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Boldizsár Németh
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable griddler
  main-is:             Main.hs
  build-depends:       base, mtl, split, JuicyPixels
  default-language:    Haskell2010